Added Some changes

--- a/src/test/resources/configs/config.properties
+++ b/src/test/resources/configs/config.properties
@@ -5,6 +5,7 @@ os = Windows
 username = pratikj048@gmail.com
 password = Test@12345
 
-HubURL = 
+remote = true
+hubURL = http://35.154.175.177:4444/wd/hub
 Headless = false
 Highlight = false
