--- a/src/test/resources/configs/config_stagging.properties
+++ b/src/test/resources/configs/config_stagging.properties
@@ -5,6 +5,7 @@ os = Windows
 username = pratik.jain2@outlook.com
 password = Test@123
 
-HubURL = 
+remote = true
+hubURL = http://35.154.175.177:4444/wd/hub
 Headless = false
 Highlight = false
