Added changes related to docker

--- a/src/test/resources/configs/config.properties
+++ b/src/test/resources/configs/config.properties
@@ -6,6 +6,6 @@ username=pratikj048@gmail.com
 password=Test@12345
 
 remote=true
-hubURL=http://35.154.175.177:4444/wd/hub
+hubURL=http://35.154.175.177/:4444/wd/hub
 Headless=false
 Highlight=false
