--- a/src/test/resources/configs/config.properties
+++ b/src/test/resources/configs/config.properties
@@ -5,7 +5,7 @@ os=Windows
 username=pratikj048@gmail.com
 password=Test@12345
 
-remote=false
+remote=true
 hubURL=http://52.66.19.49:4444/wd/hub
 Headless=false
 Highlight=false
