--- a/src/test/resources/configs/config.properties
+++ b/src/test/resources/configs/config.properties
@@ -5,7 +5,7 @@ os=Windows
 username=pratikj048@gmail.com
 password=Test@12345
 
-remote=true
+remote=false
 hubURL=http://65.0.61.191:4444/wd/hub
 Headless=false
 Highlight=false
